test/classes/errors/nilability-init-field-arg/init-field-arg-oknil-owned-from-oknil-borrowed.chpl
//  lhs: owned?  rhs: borrowed?  error: mm

class MyClass {  var x: int;  }

var rhs: borrowed MyClass?;

record MyRecord {
  var lhs: owned MyClass?;
  proc init(in rhs) where ! isSubtype(rhs.type, MyRecord) {
    lhs = rhs;
  }
}

var myr = new MyRecord(rhs);

compilerError("done");
